Update README.md
add compile without gradle instructions