@@ -11,16 +11,8 @@ gradlew run
 ```
 can be executed in the project folder to build and launch the application.
 
-## How to build in IntelliJ:
-
-To run the program with gradle, make sure your IntelliJ configuration looks like this. The important thing being the 'run' inside the tasks field.
-![](https://i.imgur.com/M1SPfKj.png) 
-
-
 
 ## How to test:
-
-
 
 Automatic test cases can be run with the command
 ```
@@ -37,3 +29,18 @@ A standalone binary or installer can be compiled with the use of the command
 gradlew jpackage
 ```
 which will generate an executable with its own runtime and an installer for your host operating system. This package can then be installed or ran on a machine that does not have the JRE installed.
+
+
+## How to build in IntelliJ:
+
+To run the program with gradle, make sure your IntelliJ configuration looks like this. The important thing being the 'run' inside the tasks field.
+![](https://i.imgur.com/M1SPfKj.png) 
+
+### How to build without gradle:
+If you do not wish to compile with gradle and want to compile the program directly, you will need to obtain the JavaFX sdk on your own from this page. https://gluonhq.com/products/javafx/ Please scroll down to version 11.0.2, download, and extract the archive to a permanent location, "C:\Program Files\Java\javafx-sdk-11.0.2\" For example.
+
+Then you can modify the VM settings of your IDE with 
+~~~~
+"--module-path "C:\Program Files\Java\javafx-sdk-11.0.2\lib" --add-modules javafx.controls,javafx.fxml"
+~~~~
+
